# libcpp

./: CMakeLists.txt
include/: input.h
src/: input.cpp
test/: CMakeLists.txt
